--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: my-app
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: my-app
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-app-container
-        image: your-docker-registry/my-app:latest
+        image: nginx
         ports:
         - containerPort: 80
         resources:
